Bug 251442 - [WGSL] Ignore extraneous semicolon in statements and declarations
Summary: [WGSL] Ignore extraneous semicolon in statements and declarations
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-01-31 10:14 PST by Tadeu Zagallo
Modified: 2023-02-01 01:38 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2023-01-31 10:14:28 PST
...
Comment 1 Radar WebKit Bug Importer 2023-01-31 10:14:49 PST
<rdar://problem/104873247>
Comment 2 Tadeu Zagallo 2023-01-31 10:18:10 PST
Pull request: https://github.com/WebKit/WebKit/pull/9389
Comment 3 EWS 2023-02-01 01:38:13 PST
Committed 259668@main (4ce5ef2d7e09): <https://commits.webkit.org/259668@main>

Reviewed commits have been landed. Closing PR #9389 and removing active labels.