[WGSL] Ignore extraneous semicolons in statements and declarations https://bugs.webkit.org/show_bug.cgi?id=251442 rdar://104873247

Reviewed by Myles C. Maxfield.

Update parser to match the spec: semicolons are valid statements and declarations.
Add the code to `parseGlobalDecl` to skip semicolons and update `parseStatement`
so we don't allocate an empty node if we find extraneous semicolons.

* Source/WebGPU/WGSL/Parser.cpp:
(WGSL::Parser<Lexer>::parseGlobalDecl):
(WGSL::Parser<Lexer>::parseStatement):

Canonical link: https://commits.webkit.org/259668@main